force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/Cloudrop__BulkEmail_Status__c.object-meta.xml
<CustomObject>
    <label>MassMailer Email Status</label>
    <nameField>
        <displayFormat>MASSMAILER EMAIL-{0000}</displayFormat>
        <label>MassMailer Email Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MassMailer Email Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>