force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__AB_Template__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__AB_Template__c</fullName>
    <label>A/B Template</label>
    <length>120</length>
    <type>Text</type>
</CustomField>