force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Account__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BulkEmail_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>