force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Bounce_Type__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Bounce_Type__c</fullName>
    <formula>IF( AND(Cloudrop__Event__c == &apos;bounce&apos;, Cloudrop__Type__c == &apos;bounce&apos;) , &apos;Hard Bounce&apos;, IF(AND(Cloudrop__Event__c == &apos;bounce&apos;, Cloudrop__Type__c == &apos;blocked&apos;), &apos;Soft Bounce&apos;, &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bounce Type</label>
    <type>Text</type>
</CustomField>