force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Bulk_Email_Statistic__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Bulk_Email_Statistic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MassMailer Outreach</label>
    <referenceTo>Cloudrop__Bulk_Email_Statistic__c</referenceTo>
    <relationshipLabel>MassMailer Email Status</relationshipLabel>
    <relationshipName>BulkEmail_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>