force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Campaign__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>MassMailer Email Status</relationshipLabel>
    <relationshipName>MassMailer_Email_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>