force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Case__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>MassMailer Email Status</relationshipLabel>
    <relationshipName>MassMailer_Email_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>