force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Clicked_URL__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Clicked_URL__c</fullName>
    <label>Old Clicked URL</label>
    <type>Url</type>
</CustomField>