force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Cloudrop_Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Cloudrop_Event_Time__c</fullName>
    <label>Event Time</label>
    <type>DateTime</type>
</CustomField>