force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Contact__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>BulkEmail_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>