force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>