force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Event_Id__c</fullName>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>