force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__First_Click_Time__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__First_Click_Time__c</fullName>
    <formula>IF(Cloudrop__Event__c == &apos;click&apos;, CreatedDate, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Click Time</label>
    <type>DateTime</type>
</CustomField>