force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__First_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__First_Open_Time__c</fullName>
    <formula>IF(Cloudrop__Event__c == &apos;open&apos;, CreatedDate, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Open Time</label>
    <type>DateTime</type>
</CustomField>