force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Full_Clicked_URL__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Full_Clicked_URL__c</fullName>
    <label>Clicked URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>