force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__IP_Address__c</fullName>
    <label>IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>