force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Last_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Last_Open_Time__c</fullName>
    <label>Last Open Time</label>
    <type>DateTime</type>
</CustomField>