force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Lead__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>BulkEmail_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>