force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__MassMailer_Doc_AUTO_CREATED__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__MassMailer_Doc_AUTO_CREATED__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MassMailer Doc</label>
    <referenceTo>Cloudrop__Cloud_Storage__c</referenceTo>
    <relationshipLabel>MassMailer Email Status</relationshipLabel>
    <relationshipName>BulkEmail_Statuss</relationshipName>
    <type>Lookup</type>
</CustomField>