force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Message_ID__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Message_ID__c</fullName>
    <description>This fields stores sg_message_id coming from SendGrid</description>
    <label>Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>