force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Number_Of_Click__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Number_Of_Click__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number Of Click</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>