force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MassMailer Email Status</relationshipLabel>
    <relationshipName>MassMailer_Email_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>