force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Reason__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Reason__c</fullName>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>