force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__Related_Object_Ids__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Related_Object_Ids__c</fullName>
    <label>Related Object Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>