force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__User__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relation between the User object and mass mailer email status object</description>
    <inlineHelpText>Lookup relation between the User object and mass mailer email status object</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MassMailer_Email_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>