force-app/main/default/objects/Cloudrop__BulkEmail_Status__c/fields/Cloudrop__User_Agent__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__User_Agent__c</fullName>
    <label>User Agent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>